# rust_integration_1

./: .gitignore  Cargo.toml  Readme.md  build.rs  data.sqlite  laptopy.txt  laptopy.xml
migrations/: 20231114141247_initial.down.sql  20231114141247_initial.up.sql
resources/: laptop_list.ui  laptop_row.ui  resources.gresource.xml  style.css  window.ui
src/: main.rs
src/gui/: mod.rs
src/gui/laptop_list/: imp.rs  mod.rs
src/gui/laptop_object/: imp.rs  mod.rs
src/gui/laptop_row/: imp.rs  mod.rs
src/gui/window/: imp.rs  mod.rs
src/laptop_object/: imp.rs  mod.rs
src/laptop_row/: imp.rs  mod.rs
src/storage/: imp.rs  mod.rs
src/storage/models/: factory.rs  mod.rs  models_csv.rs  models_db.rs  models_xml.rs
src/storage/traits/: duplicate_aware.rs  mod.rs  partial_eq.rs
src/window/: imp.rs  mod.rs
