[package]
name = "rust_integration_1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
adw = { version = "0.5.3", package = "libadwaita", features = ["gtk_v4_6"] }
csv = "1.3.0"
gtk = { version = "0.7.3", package = "gtk4", features = ["v4_6"] }
log = "0.4.20"
once_cell = "1.18.0"
serde = { version = "1.0.189", features = ["derive"] }
xml-rs = "0.8.19"
yaserde = "0.8.0"
yaserde_derive = "0.8.0"
sqlx = { version = "0.7", features = [ "runtime-tokio", "sqlite" ] }

[dev-dependencies]
sqlx-cli = "*"

[build-dependencies]
glib-build-tools = "0.18.0"
